--- a/deployment.yml
+++ b/deployment.yml
@@ -4,6 +4,9 @@ metadata:
   name: hello-world
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      app: hello-world
   strategy:
     rollingUpdate:
       maxSurge: 1
